--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,20 @@ DerivedData
 *.ipa
 *.xcuserstate
 
+# .gitignore_global
+####################################
+######## OS generated files ########
+####################################
+.DS_Store
+.DS_Store?
+*.swp
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
