--- a/CAPUBBS/CAPUBBS-Info.plist
+++ b/CAPUBBS/CAPUBBS-Info.plist
@@ -32,7 +32,9 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3900</string>
+	<string>3901</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
